# telegram_send

./: .gitignore  README.md  setup.cfg
src/telegram_send/: __init__.py  spam_filter.py  telegram_send.py
tests/: spam_filter_test.py  telegram_test.py
